--- a/src/app/pages/audio-manager/audio-manager.html
+++ b/src/app/pages/audio-manager/audio-manager.html
@@ -17,6 +17,21 @@
         <option *ngFor="let playlist of playlists" [value]="playlist._id">{{ playlist.name }}</option>
       </select>
     </div>
+
+    <div class="flex items-end h-full">
+      <label class="inline-flex items-center">
+        <input type="checkbox" class="form-checkbox h-5 w-5 text-indigo-600" [(ngModel)]="showOnlyWithAudio" (change)="loadPhrases()">
+        <span class="ml-2 text-gray-700">Mostrar solo frases con audio</span>
+      </label>
+    </div>
+
+    <div class="flex items-end h-full"> 
+      <label class="inline-flex items-center">
+        <input type="checkbox" class="form-checkbox h-5 w-5 text-indigo-600" [(ngModel)]="showRandomOrder" (change)="loadPhrases()">
+        <span class="ml-2 text-gray-700">Ordenar aleatoriamente</span>
+      </label>
+
+    </div>
   </div>
 
   <div *ngIf="phrases.length === 0" class="no-phrases-message text-center p-4 bg-green-100 text-green-700 rounded-lg">
