--- a/src/app/pages/audio-manager/audio-manager.html
+++ b/src/app/pages/audio-manager/audio-manager.html
@@ -41,9 +41,25 @@
   <div class="phrase-list space-y-6">
     <div *ngFor="let phrase of phrases" class="phrase-card bg-white p-6 rounded-lg shadow-md border border-gray-200">
       <h2 class="text-xl font-semibold text-gray-900">{{ phrase.originalText }}</h2>
-      <p *ngIf="phrase.translations.length > 0" class="text-gray-700">
-        <strong>{{ phrase.translations[0].language | uppercase }}:</strong> "{{ phrase.translations[0].translatedText }}"
-      </p>
+   <div *ngIf="phrase.translations.length > 0" class="flex items-center text-gray-700 mt-1">
+  <p>
+    <strong>{{ phrase.translations[0].language | uppercase }}:</strong> "{{ phrase.translations[0].translatedText }}"
+  </p>
+  
+  <button 
+    (click)="copyToClipboard(phrase.translations[0].translatedText, phrase._id)"
+    class="ml-2 p-1 rounded-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+    title="Copiar texto">
+    
+    <svg *ngIf="copiedPhrases[phrase._id]" class="w-5 h-5 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+    </svg>
+    
+    <svg *ngIf="!copiedPhrases[phrase._id]" class="w-5 h-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+    </svg>
+  </button>
+</div>
 
       <div class="audio-slots grid grid-cols-1 md:grid-cols-3 gap-6 mt-4 border-t border-gray-200 pt-4">
         
