--- a/src/app/pages/assessment-setup/assessment-setup.html
+++ b/src/app/pages/assessment-setup/assessment-setup.html
@@ -2,12 +2,41 @@
   <div class="bg-white p-8 rounded-2xl shadow-2xl">
     <h1 class="text-3xl font-bold text-gray-800 mb-6">Configurar Evaluación</h1>
 
-    <div class="mb-4">
-      <label class="block text-gray-700 text-sm font-bold mb-2">Playlist (opcional)</label>
-      <select [(ngModel)]="config.playlistId" class="w-full p-3 border rounded">
+
+
+    <div class="mb-4 text-left">
+      <label class="block text-gray-700 font-bold mb-2">Playlist (opcional)</label>
+      <select [(ngModel)]="config.playlistId" (ngModelChange)="getGroupsByPlaylistId($event)"
+        class="w-full p-3 border rounded">
         <option [ngValue]="undefined">Todas mis frases</option>
         <option *ngFor="let playlist of playlists" [value]="playlist._id">{{ playlist.name }}</option>
       </select>
+    </div>
+
+    <div *ngIf="allGroups.length > 0" class="mb-4 text-left">
+      <label class="block text-gray-700 font-bold mb-2">Grupos (opcional)</label>
+
+      <div class="relative">
+        <div class="w-full p-2 border rounded flex flex-wrap items-center gap-2">
+          <span *ngFor="let group of selectedGroups"
+            class="bg-indigo-100 text-indigo-800 text-sm font-medium px-2.5 py-0.5 rounded-full flex items-center">
+            {{ group.name }}
+            <button (click)="removeGroup(group)" class="ml-2 text-indigo-500 hover:text-indigo-800">&times;</button>
+          </span>
+
+          <input type="text" [(ngModel)]="groupSearchTerm" (focus)="isDropdownOpen = true"
+            (blur)="closeDropdownWithDelay()" placeholder="Busca y agrega grupos..."
+            class="flex-grow p-1 focus:outline-none">
+        </div>
+
+        <div *ngIf="isDropdownOpen && filteredGroups.length > 0"
+          class="absolute z-10 w-full mt-1 bg-white border rounded shadow-lg max-h-60 overflow-y-auto">
+          <div *ngFor="let group of filteredGroups" (mousedown)="selectGroup(group); $event.preventDefault()"
+            class="px-4 py-2 cursor-pointer hover:bg-gray-100">
+            {{ group.name }}
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="mb-4">
@@ -24,7 +53,8 @@
       <input type="number" [(ngModel)]="config.limit" class="w-full p-3 border rounded">
     </div>
 
-    <button (click)="startAssessment()" class="w-full bg-blue-600 text-white font-bold py-4 rounded-lg hover:bg-blue-700">
+    <button (click)="startAssessment()"
+      class="w-full bg-blue-600 text-white font-bold py-4 rounded-lg hover:bg-blue-700">
       Comenzar Evaluación
     </button>
   </div>
